2007-04-20  Richard Earnshaw  <rearnsha@arm.com>

	* gas/arm/mapshort.s: Add a small .data section.
	* gas/arm/mapshort-eabi.d: Check the data section doesn't confuse
	disassembly.
	* gas/arm/mapshort-elf.d: Likewise.

2007-04-19  Paul Brook  <paul@codesourcery.com>

	* gas/arm/thumb1_unified.d: New test.
	* gas/arm/thumb1_unified.s: New test.

2007-04-19  Nathan Froyd <froydnj@codesourcery.com>

	* gas/ppc/booke.s: Add tlbsx, tlbsxe.
	* gas/ppc/booke.d: Update.

2007-04-18  H.J. Lu <hongjiu.lu@intel.com>

	* gas/i386/i386.exp: Add sse4.2 and x86-64-sse4.2.

	* gas/i386/sse4_2.d: New file.
	* gas/i386/sse4_2.s: Likewise.
	* gas/i386/x86-64-sse4_2.d: Likewise.
	* gas/i386/x86-64-sse4_2.s: Likewise.

2007-04-18  H.J. Lu <hongjiu.lu@intel.com>

	* gas/i386/i386.exp: Add sse4.1 and x86-64-sse4.1.

	* gas/i386/sse4_1.d: New file.
	* gas/i386/sse4_1.s: Likewise.
	* gas/i386/x86-64-sse4_1.d: Likewise.
	* gas/i386/x86-64-sse4_1.s: Likewise.

2007-04-18  Paul Brook  <paul@codesourcery.com>

	* gas/arm/thumb2_add.s: Add rsb #0 test.
	* gas/arm/thumb2_add.d: Update expected output.

2007-04-04  Paul Brook  <paul@codesourcery.com>

	* gas/arm/neon-cov.s: Add new vext test.
	* gas/arm/neon-cov.d: Ditto.

2007-04-01  Christian Groessler  <chris@groessler.org>

	* gas/z8k/calr.d: Fix for 64bit bfd.
	* gas/z8k/djnz.d: Likewise.
	* gas/z8k/inout.d: Likewise.
	* gas/z8k/jmp-cc.d: Likewise.
	* gas/z8k/jr-back.d: Likewise.
	* gas/z8k/jr-forw.d: Likewise.
	* gas/z8k/reglabel.d: Likewise.
	* gas/z8k/ctrl-names.d: Fix name.  Fix for 64bit bfd.
	* gas/z8k/ret-cc.d: Likewise.

2007-03-31  Alan Modra  <amodra@bigpond.net.au>

	* gas/i386/nops-3.s: Don't use .align.

2007-03-30  Paul Brook  <paul@codesourcery.com>

	* gas/arm/thumb2_ldmstm.d: New test.
	* gas/arm/thumb2_ldmstm.s: New test.

2007-03-27  Alan Modra  <amodra@bigpond.net.au>

	* gas/ppc/reloc.s: New.
	* gas/ppc/reloc.d: New.

2007-03-26  Julian Brown  <julian@codesourcery.com>

	* gas/arm/neon-const.s: Use FP syntax for 0/-0.